--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "start:prod": "node dist/main",
     "start:express": "node src/express-app.js",
     "dev": "node src/express-app.js",
+    "seed": "node src/scripts/seed.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.js\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -29,6 +30,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
